# learnopengl

./: .gitignore  CMakeLists.txt
includes/glad/: glad.h
res/shader/: shader.fs  shader.vs
src/: Camera.h  Shader.cpp  Shader.h  glad.c  main.cpp  stb_image.cpp
